Add github source and save generated html in docs folder

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -123,7 +123,9 @@
     </section>
 
     <section class="mt-1">&nbsp;</section>
-    <footer class="text-xs text-center mt-72" style="page-break-after:always;">{{footer}}</footer>
+    <footer class="text-xs text-center mt-72" style="page-break-after:always;">
+      {{footer}} <a href="{{source}}" class="underline">Github project</a>
+    </footer>
   </main>
 </section>
 </body>
