Fix consistency issues

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -115,14 +115,14 @@
           </figure>
         {{else}}
           {{#descriptions}}
-            <p class="mt-4">{{{this}}}</p>
+            <p class="mt-4 text-sm">{{{this}}}</p>
           {{/descriptions}}
         {{/if}}
         <hr class="mt-6"/>
       {{/myWork}}
     </section>
 
-    <section class="mt-1">&nbsp;</section>
+    <section class="mt-4">&nbsp;</section>
     <footer class="text-xs text-center mt-72" style="page-break-after:always;">
       {{footer}} <a href="{{source}}" class="underline">Github project</a>
     </footer>
